Add custom dialogs instead of the default message box

--- a/ThunderBullet/ThunderBullet.csproj
+++ b/ThunderBullet/ThunderBullet.csproj
@@ -284,6 +284,9 @@
     <Compile Include="Views\UserControls\UserControlTextMulti.xaml.cs">
       <DependentUpon>UserControlTextMulti.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialog.xaml.cs">
+      <DependentUpon>Dialog.xaml</DependentUpon>
+    </Compile>
     <None Include="LSHighlighting.xshd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
@@ -812,6 +815,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\UserControlTextMulti.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
